# voztts

./: .gitignore  CMakeLists.txt  package.xml
data/marytts_cache/: index.csv
include/voztts/: utils.h
launch/: vozttp.launch
scripts/: marytts_server.bash
src/: piccots2.cpp  voztts.cpp
